# center-brain-archive

./: .gitignore  README.md  case_fixer.py  center_brain_archive.js  center_brain_archive.js.map  dsp.json  index.html  style.css
.github/workflows/: main.yml
generator/: Cargo.toml
generator/src/: generator.rs  items.rs  main.rs  producers.rs  recipes.rs  schenum_map.rs  technologies.rs
site/: package-lock.json  package.json  webpack.config.js
site/src/: checkers.ts  dom.ts  dsp.d.ts  dsp.json  index.html  main.ts  params.ts  style.css
site/src/translate/: english.ts
