[package]
name = "generator"
version = "0.1.0"
authors = ["gamma-delta"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Will I ever in MY ENTIRE LIFE write anything WITHOUT THIS CRATE
enum-map = { version = "0.6.4", features = ["serde"] }
strum = "0.20.0"
strum_macros = "0.20"
serde = "1.0.123"
schemars = "0.8.0"
serde_json = "1.0.59"
anyhow = "1.0.38"